--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
   </template>
 
 
-  <script type="module" src="js/main.js"></script>
-
+  <script type="module" src="./js/main.js"></script>
+  <script src="./js/functions.js"></script>
 </body>
 </html>
